src/objects/Report_Palletplaatsen__c.object
<CustomObject>
    <fields>
        <fullName>Aantal_palletplaatsen__c</fullName>
        <label>Aantal palletplaatsen</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Aantal_palletplaatsen_controleveld__c</fullName>
        <label>Aantal palletplaatsen controleveld</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Klant__c</fullName>
        <label>Klant</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Report Palletplaatsen</label>
    <listViews>
        <fullName>All</fullName>
        <columns>CREATED_DATE</columns>
        <columns>Klant__c</columns>
        <columns>Project__c</columns>
        <columns>Aantal_palletplaatsen__c</columns>
        <columns>Aantal_palletplaatsen_controleveld__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Report Palletplaatsen Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Reports Palletplaatsen</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>